2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1340/cpukit
	* sapi/inline/rtems/chain.inl: Add rtems_chain_initialize to public
	chain API.

2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/heap.h,
	score/include/rtems/score/protectedheap.h,
	score/include/rtems/score/wkspace.h, score/src/heap.c,
	score/src/heapallocate.c, score/src/heapallocatealigned.c,
	score/src/heapextend.c, score/src/heapresizeblock.c,
	score/src/heapsizeofuserarea.c, score/src/pheapgetblocksize.c,
	score/src/wkspace.c: Revert use of ssize_t. This type is not
	guaranteed to be able to represent a positive number greater than the
	size of a single allocatable object. We needed a type that is able to
	represent the size of a pool of multiple allocatable objects or
	potentially nearly all memory.

2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Do not
	think about running init/fini on AVR. We do not know what mechanism
	it uses but this is not it.

2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1306/cpukit
	* posix/inline/rtems/posix/priority.inl: Eliminate hard coded numbers
	in favor of existing macros.

2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am: Add dummy vfork() implementation.
	* posix/src/vfork.c: New file.

2008-11-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1336/cpukit
	* sapi/inline/rtems/chain.inl: Add rtems_chain_prepend_unprotected and
	rtems_chain_append_unprotected.

2008-11-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am: Add getrusage().
	* libcsupport/src/getrusage.c: New file.

2008-11-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/timespecaddto.c: Fix typo.

2008-11-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/ttyname.c: Change third parameter of ttyname to be
	size_t instead of int.

2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>
